--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords":[
+    "seo",
+    "seo-validation",
+    "tag",
+    "validator"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/achmurali/seo-tags-validator.git"
